    when USB_CFG_PULLUP_IOPORTNAME is not defined.

* Release 2007-12-13

  - Renamed all include-only assembler modules from *.S to *.inc so that
    people don't add them to their project sources.
  - Distribute leap bits in tx loop more evenly for 16 MHz module.
  - Use "macro" and "endm" instead of ".macro" and ".endm" for IAR
  - Avoid compiler warnings for constant expr range by casting some values in
    USB descriptors.

* Release 2008-01-21

  - Fixed bug in 15 and 16 MHz module where the new address set with
    SET_ADDRESS was already accepted at the next NAK or ACK we send, not at
    the next data packet we send. This caused problems when the host polled
    too fast. Thanks to Alexander Neumann for his help and patience debugging
    this issue!

* Release 2008-02-05

  - Fixed bug in 16.5 MHz module where a register was used in the interrupt
    handler before it was pushed. This bug was introduced with version
    2007-09-19 when common parts were moved to a separate file.
  - Optimized CRC routine (thanks to Reimar Doeffinger).

* Release 2008-02-16

  - Removed outdated IAR compatibility stuff (code sections).
  - Added hook macros for USB_RESET_HOOK() and USB_SET_ADDRESS_HOOK().
  - Added optional routine usbMeasureFrameLength() for calibration of the
    internal RC oscillator.

* Release 2008-02-28

  - USB_INITIAL_DATATOKEN defaults to USBPID_DATA1 now, which means that we
    start with sending USBPID_DATA0.
  - Changed defaults in usbconfig-prototype.h
  - Added free USB VID/PID pair for MIDI class devices
  - Restructured AVR-USB as separate package, not part of PowerSwitch any more.

* Release 2008-04-18

  - Restructured usbdrv.c so that it is easier to read and understand
  - Better code optimization with gcc 4
  - If a second interrupt in endpoint is enabled, also add it to config
    descriptor.
  - Added config option for long transfers (above 254 bytes), see
    USB_CFG_LONG_TRANSFERS in usbconfig.h.